fix(blocks): decoration from backend

--- a/components/block/blockWrapper/block.module.scss
+++ b/components/block/blockWrapper/block.module.scss
@@ -1,8 +1,7 @@
 /** @define block */
 
 .block {
-	// @apply py-xl-5xl border-b-1; //with white border
-	@apply py-xl-5xl relative; //without
+	@apply py-xl-5xl relative;
 
 	&__inner {
 		@apply w-9/10 max-w-7xl mx-auto;
@@ -27,16 +26,16 @@
 	> svg {
 		@apply fill-bg;
 
-		filter: drop-shadow(-2rem -2rem 4rem #72b8d1);
+		filter: drop-shadow(-2rem -2rem 4rem #015b88); // brand-600
 	}
 }
 
 .one {
-	@apply -left-[20vw] -top-[20vw];
+	@apply -left-[20vw] -top-[15vw];
 }
 
 .two {
-	@apply -right-[12vw] -top-[10vw];
+	@apply -right-[12vw] -top-[20vw];
 	> svg {
 		transform: scaleX(-1);
 	}
