fix(animation): aspect ratio on re-size

--- a/components/block/animation/animation.module.scss
+++ b/components/block/animation/animation.module.scss
@@ -17,7 +17,7 @@
 }
 
 .mycanvas {
-	@apply sticky w-full h-full max-h-screen top-0 left-0 z-0;
+	@apply sticky w-full h-[56vw] max-h-screen top-0 left-0 z-0;
 }
 
 .textblock {
