--- a/components/block/animation/animation.module.scss
+++ b/components/block/animation/animation.module.scss
@@ -23,7 +23,7 @@
 }
 
 .mycanvas {
-	@apply sticky w-full h-[56vw] max-h-screen top-[25vw] left-0 z-0;
+	@apply invisible md__visible sticky w-full h-[56vw] max-h-screen top-[-100vh] left-0 z-0;
 
 	@screen md {
 		@apply top-[10vw];
@@ -34,12 +34,28 @@
 	}
 }
 
+.mobileimage {
+	@apply visible md__invisible relative w-full h-[56vw] max-h-screen z-0;
+}
+
+.notloaded {
+	.staticimage {
+		@apply opacity-0 transition-all duration-1000;
+	}
+}
+
+.loaded {
+	.staticimage {
+		@apply opacity-100 transition-all duration-1000;
+	}
+}
+
 .textblock {
 	@apply w-9/10 max-w-7xl mx-auto z-40 duration-500;
 }
 
 .one {
-	@apply absolute top-10 mx-auto pl-20 pt-16;
+	@apply relative md__absolute mx-auto pl-20 pt-16;
 
 	@screen md {
 		@apply absolute top-0 mx-auto pl-52;
@@ -47,7 +63,7 @@
 }
 
 .two {
-	@apply absolute top-[125vw] pl-20;
+	@apply relative md__absolute top-[125vw] pl-20;
 
 	@screen md {
 		@apply top-[80vw] pl-[20vw];
@@ -63,34 +79,34 @@
 }
 
 .three {
-	@apply relative pl-20 pt-[200vw];
+	@apply relative md__absolute pl-20 pt-[120vw];
 
 	@screen md {
-		@apply flex flex-row-reverse pr-20 pt-[90vw];
+		@apply flex flex-row-reverse top-[15vw];
 	}
 
 	@screen lg {
-		@apply flex flex-row-reverse pr-20 pt-[60vw];
+		@apply top-[20vw];
 	}
 
 	@screen xl {
-		@apply flex flex-row-reverse pr-20 pt-[35vw];
+		@apply top-[30vw];
 	}
 }
 
 .rest {
-	@apply relative pl-20 pt-[125vw];
+	@apply relative pl-20 pt-[100vw];
 
 	@screen md {
-		@apply flex flex-row-reverse pr-20 pt-[95vw];
+		@apply flex flex-row-reverse pr-20 pt-[105vw];
 	}
 
 	@screen lg {
-		@apply flex flex-row-reverse pr-20 pt-[60vw];
+		@apply pt-[60vw];
 	}
 
 	@screen xl {
-		@apply flex flex-row-reverse pr-20 pt-[35vw];
+		@apply pt-[48vw];
 	}
 }
 
@@ -103,7 +119,7 @@
 }
 
 .hidden {
-	@apply opacity-0;
+	@apply md__opacity-0;
 }
 
 .visible {
@@ -111,29 +127,10 @@
 }
 
 .graphic {
-	@apply absolute z-0 -left-[20vw] -top-[15vw];
+	@apply absolute z-0 -right-[12vw] -top-[20vw];
 	> svg {
 		@apply fill-bg;
-
 		filter: drop-shadow(-2rem -2rem 4rem #015b88); // brand-600
+		transform: scaleX(-1);
 	}
 }
-
-// .one {
-// 	@apply -left-[20vw] -top-[15vw];
-// }
-
-// .two {
-// 	@apply -right-[12vw] -top-[20vw];
-// 	> svg {
-// 		transform: scaleX(-1);
-// 	}
-// }
-
-// .three {
-// 	@apply -right-[12vw] -top-[10vw];
-
-// 	> svg {
-// 		transform: rotate(150deg);
-// 	}
-// }
