fix(shop): nft icon on mobile

--- a/components/block/shop/shop.module.scss
+++ b/components/block/shop/shop.module.scss
@@ -41,7 +41,7 @@
 }
 
 .asterisk {
-	@apply flex flex-row items-center gap-1;
+	@apply flex flex-col sm__flex-row items-center gap-1;
 
 	> svg {
 		@apply w-10 h-5;
