feat(hero): image

--- a/components/hero/default/default.module.scss
+++ b/components/hero/default/default.module.scss
@@ -13,12 +13,18 @@
 }
 
 .imagewrapper {
-	// styles here
 	@apply relative h-60 md__h-fit;
 }
 
 .graphic {
-	@apply w-[120vw] h-[80vw] absolute overflow-hidden bg-gradient-radial-at-b from-brand-500 to-transparent -top-[45vw] opacity-60 z-0;
+	@apply w-[120vw] h-[80vw] absolute overflow-hidden -top-[45vw] opacity-60 z-0 bg-gradient-radial-at-b from-brand-500 to-transparent;
+
+	// background-image: radial-gradient(
+	// 		ellipse closest-side,
+	// 		rgb(2, 159, 237, 1),
+	// 		rgb(2, 159, 237, 0)
+	// 	),
+	// 	url('../../../public/hero-image.jpg'); // bg-gradient-radial-at-b from-brand-500 to-transparent
 
 	@screen md {
 		@apply w-[80vw] -top-[40vw];
@@ -26,7 +32,7 @@
 }
 
 .curve1 {
-	@apply absolute h-full z-0 bg-contrast-50 -left-4 top-[60vw];
+	@apply absolute h-full z-10 bg-contrast-50 -left-4 top-[60vw];
 
 	width: 128%;
 	border-radius: 50% / 100%;
@@ -43,7 +49,7 @@
 }
 
 .curve2 {
-	@apply absolute h-full z-0 bg-contrast-50 -left-0 top-0;
+	@apply absolute h-full z-10 bg-contrast-50 -left-0 top-0;
 
 	width: 40%;
 	border-radius: 100% / 50%;
@@ -56,6 +62,10 @@
 	}
 }
 
-.image {
-	@apply z-10 relative;
+.heroimage {
+	@apply z-0 absolute opacity-50 top-1/3 left-[20%] w-3/5 h-3/5;
+
+	@screen md {
+		@apply top-[40%] left-0 w-[60%] h-2/5;
+	}
 }
